js по БЭМ, добавил шрифт

--- a/blocks/popup/__submit-button/form__submit-button.css
+++ b/blocks/popup/__submit-button/form__submit-button.css
@@ -7,7 +7,7 @@
     font-size: 18px;
     line-height: 1.2;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     padding: 0;
     border: 0;
 }
