--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,8 @@
 .header{
     max-width: 880px;
     margin: 45px auto 36.25px auto;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    padding-bottom: 41px;
 }
 
 @media screen and (max-width: 912px) {
