--- a/blocks/intro/__open/intro__open.css
+++ b/blocks/intro/__open/intro__open.css
@@ -1,6 +1,8 @@
-.form__open{
+.intro__open{
     background-image: url(../../../images/Vector2.svg);
-    background-size: 100%;
+    background-size: 10px;
+    background-repeat: no-repeat;
+    background-position: center;
     width: 24px;
     height: 24px;
     border: 1px solid #fff;
@@ -9,13 +11,14 @@
     cursor: pointer;
     transition: 0.3s;
     background-color: unset;
+    outline: none;
 }
 
-.form__open:hover{
+.intro__open:hover{
     opacity: 0.6;
 }
 @media screen and (max-width: 620px){
-    .form__open{
+    .intro__open{
         width: 18px;
         height: 18px;
     }
