--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,20 +1,24 @@
-.section__title{
+.intro__title{
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
     line-height: 1.14;
     color: #fff;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 912px){
-    .section__title{
+    .intro__title{
         margin: 0 auto;
     }
 }
 
 @media screen and (max-width: 620px){
-    .section__title{
+    .intro__title{
         font-size: 27px;
+        line-height: 1.22;
     }
 }
