--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,21 +1,16 @@
-.popup__filed{
+.popup__input{
     width: 83.26%;
     height: 40px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.2;
-    color: #000;
     margin: 0 auto 17px auto;
     border: white;
-    border-bottom: 1px solid #000;
+    border-bottom: rgba(0, 0, 0, 0.2) 1px solid;
     box-sizing: border-box;
     padding: 0;
+    outline: none;
 }
 
 @media screen and (max-width: 620px) {
-    .popup__filed{
+    .popup__input{
         max-width: 84.4%;
-        font-size: 14px;
     }
 }
