--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -9,7 +9,8 @@
     font-style: normal;
     font-weight: 400;
     padding: 0;
-    border: 0;
+    border-radius: 0;
+    outline: none;
 }
 
 .popup__submit-button:hover{
@@ -20,5 +21,6 @@
     .popup__submit-button{
         width: 84.4%;
         margin: 28px auto 25px auto;
+        font-size: 14px;
     }
 }
