--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.form__title{
+.popup__title{
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 620px) {
-    .form__title{
+    .popup__title{
         max-width: 84.4%;
         font-size: 18px;
         margin: 41px auto 62px auto;
