--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,6 +7,11 @@
     box-sizing: border-box;
     padding: 0;
     outline: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000;
 }
 
 @media screen and (max-width: 620px) {
