Добовлены свойства js

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,8 @@
 .place__image{
     border-radius: 10px 10px 0px 0px;
+    width: 282px;
+    height: 282px;
+}
+.place__image:hover{
+    cursor: pointer;
 }
