--- a/blocks/place/__like-icon/place__like-icon.css
+++ b/blocks/place/__like-icon/place__like-icon.css
@@ -14,6 +14,6 @@
     opacity: 0.5;
 }
 
-.place__like-icon:active{
+.place__like-icon.active{
     background: url(../../../images/Union.svg) center no-repeat;
 }
