--- a/blocks/intro/__submit-btn/intro__submit-btn.css
+++ b/blocks/intro/__submit-btn/intro__submit-btn.css
@@ -3,7 +3,7 @@
     background-size: 22px;
     background-repeat: no-repeat;
     background-position: center;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     border: 2px solid #fff;
     border-radius: 2px;
@@ -22,7 +22,6 @@
 @media screen and (max-width: 912px){
     .intro__submit-btn{
         margin: 36px 0 0 0;
-        max-width: 581px;
     }
 }
 
