--- a/pages/index.css
+++ b/pages/index.css
@@ -34,6 +34,7 @@
 @import url('../blocks/popup/__error/_visible/popup__error_visible.css');
 @import url('../blocks/popup/__button/_disabled/popup__button_disabled.css');
 @import url('../blocks/popup/__input/_type/popup__input_type_error.css');
+@import url('../blocks/popup/_type/popup_type_add-card.css');
 /*places*/
 @import url('../blocks/places/places.css');
 /*place*/
