--- a/blocks/popup/_type/popup_type_image.css
+++ b/blocks/popup/_type/popup_type_image.css
@@ -1,5 +1,6 @@
 .popup_type_image {
-    display: none;
+    visibility: visible;
+    opacity: 1;
 }
 .popup_type_image.active {
     display: block;
