--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,6 +1,4 @@
 .popup__image{
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    display: block;
+    max-width: 75vw;
+    max-height: 75vh;
 }
