--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,6 +2,8 @@
     border-radius: 10px 10px 0px 0px;
     width: 282px;
     height: 282px;
+    min-width: 282px;
+    min-height: 282px;
 }
 .place__image:hover{
     cursor: pointer;
