--- a/src/blocks/intro/__avatar/intro__avatar.css
+++ b/src/blocks/intro/__avatar/intro__avatar.css
@@ -1,12 +1,16 @@
 .intro__avatar{
-    max-width: 120px;
-    max-height: 120px;
+    width: 120px;
+    height: 120px;
     margin: 0 30px 0 0;
     border-radius: 50%;
 }
 
+.intro__avatar:hover{
+    opacity: 0.3;
+}
+
 @media screen and (max-width: 912px){
     .intro__avatar{
-        margin: 0 auto 22.25px auto;
+        margin: 0 auto;
     }
 }
