--- a/src/blocks/intro/__avatar/_type/intro__avatar_type_edit.css
+++ b/src/blocks/intro/__avatar/_type/intro__avatar_type_edit.css
@@ -1,4 +1,4 @@
-.profile__avatar-edit {
+.intro__avatar_type_edit {
     width: 26px;
     height: 26px;
     background: no-repeat center url('../../../images/Vector.svg');
