--- a/src/blocks/intro/__avatar-button/intro__avatar-button.css
+++ b/src/blocks/intro/__avatar-button/intro__avatar-button.css
@@ -1,4 +1,4 @@
-.intro__avatar_type_edit {
+.intro__avatar-button {
     width: 26px;
     height: 26px;
     background: no-repeat center url('../../../images/Vector.svg');
