--- a/src/blocks/intro/__avatar-button/intro__avatar-button.css
+++ b/src/blocks/intro/__avatar-button/intro__avatar-button.css
@@ -1,12 +1,19 @@
 .intro__avatar-button {
-    width: 26px;
-    height: 26px;
+    width: 120px;
+    height: 120px;
     background: no-repeat center url('../../../images/Vector.svg');
     border: 0;
     padding: 0;
+    margin: 0;
     cursor: pointer;
     outline: none;
     position: absolute;
-    left: 47px;
-    display: none;
+    opacity: 0;
 }
+
+.intro__avatar-button:hover {
+    opacity: .8;
+    background-color: #000;
+    border: 0;
+}
+
