--- a/src/blocks/intro/__section/intro__section.css
+++ b/src/blocks/intro/__section/intro__section.css
@@ -1,4 +1,5 @@
 .intro__section{
+    margin: 0 auto 0 30px;
     display: grid;
     grid-template-columns: 1fr auto;
     align-items: baseline;
@@ -8,6 +9,7 @@
 
 @media screen and (max-width: 912px){
     .intro__section{
+        margin: 10px auto 0 auto;
         column-gap: 10px;
         row-gap: 14px;
         justify-items: center;
